# pyStoOrm

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION_STRATEGY.md  CONFIG_QUICK_START.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  pyStoOrm.py  pyproject.toml  requirements.txt  setup.py  strategie.md
.github/workflows/: publish.yml  python-app.yml  test.yml
aurora/: project.yml
docs/: overview.puml
pystoorm/: __init__.py  __main__.py  pystoorm.py
pystoorm/analyzer/: controller.py  parser.py
pystoorm/config/: README.md  __init__.py  bootstrap.yml  config.xml  loader.py
pystoorm/config/defaults/: attribute-hints.yml  bootstrap.yml  naming-conventions.yml
pystoorm/config/defaults/style-guides/: python-pep8.yml
pystoorm/config/projects/example/: project.yml
pystoorm/database/: README_SQLITE.md  column.py  connector.py  mysqlconnector.py  nullconnector.py  postgresqlconnector.py  reference.py  schema.py  sqliteconnector.py  table.py
pystoorm/generator/: coordinator.py
pystoorm/templates/erd/: graphviz.template
pystoorm/templates/python/: model.py  model.py.template  repository.py.template  sqlbuilder.py.template
pystoorm/templates/typescript/: controller.ts.template  dto.ts.template  model.ts.template  model_test.ts.template  repository.ts.template  service.ts.template
tests/: conftest.py  test_basic.py  test_config_loader.py  test_integration_sqlite.py
tests/middleware-demo/: API_QUICKSTART.md  ARCHITECTURE.md  README.md  SUMMARY.md  create_db.py  debug_config.py  docker-compose.yml  init.sql  jest.config.js  package.json  project.yml  test-api.sh  tsconfig.json
tests/middleware-demo/src/: app.ts  server.ts
tests/middleware-demo/src/base/: base-repository.ts  base-service.ts  types.ts
tests/sampleproject/: batch.sh  classicmodels.db  convert_mysql_to_sqlite.py  example_usage.py  project.yml  sqlightsampledatabase.sql  test_sqlbuilder.py
(+6 files in other folders)
