[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pystoorm"
version = "0.1.0"
description = "Database-first code generator for any language, framework, and pattern"
readme = "README.md"
requires-python = ">=3.5"
license = "MIT"
authors = [
    {name = "Harald Stowasser", email = "pystoorm@stowasser.tv"}
]
keywords = ["orm", "database", "code-generation", "code-generator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "clint>=0.5.1",
    "mysql-connector-python>=8.0.33",
    "PyYAML>=6.0",
    "Mako>=1.2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
]

[project.urls]
Homepage = "https://github.com/StowasserH/pystoorm"
Repository = "https://github.com/StowasserH/pystoorm.git"
Documentation = "https://github.com/StowasserH/pystoorm#readme"
"Bug Tracker" = "https://github.com/StowasserH/pystoorm/issues"

[tool.setuptools]
packages = ["pystoorm", "pystoorm.analyzer", "pystoorm.generator", "pystoorm.database", "pystoorm.config"]
include-package-data = true

[tool.setuptools.package-data]
pystoorm = ["py.typed"]
